--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,12 +20,12 @@ body {
 }
 
 .background {
-    background-image: url("mobile.jpg");
+    background-image: url("../assets/mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     @media (min-width: $desktop) {
-        background-image: url("desktop.jpg");
+        background-image: url("../assets/desktop.jpg");
     }
 }
 
@@ -53,9 +53,6 @@ nav {
        a {
            text-decoration: none;
            color: $orange-color;
-            @media (orientation: portrait) {
-                color: $dark-color;
-            }
             &:hover {
               font-weight: bold;
             }
@@ -215,7 +212,6 @@ header {
              }
         }
     }
-  
 }
 
 // portfolio page
@@ -226,13 +222,6 @@ header {
     justify-content: space-evenly;
     align-items: center;
     position: relative;
-    .svg-bird {
-        border: 2px solid red;
-        width : 10%;
-        position: absolute;
-        top: -2%;
-        left: 50%;
-    }
     &-box {
         @media (orientation: portrait) {
             width: 85%;
@@ -258,19 +247,18 @@ header {
             background-color: #000;
             @media (orientation: portrait) {
                 width: 85%;
-                height: 75vh;
+                min-height: 75vh;
             }
             @media (min-width: $desktop) {
                 width: 90%;
                 height: 80%;
-                // padding: 2em;
             }
             color: $orange-color;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
             position: relative;
+            justify-content: center;
             @media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
                 width: 85%;
                 height: 70vh;
@@ -314,8 +302,10 @@ header {
             img {
                 width: 100%;
                 height: 100%;
-                // object-fit: cover;
-                transition:  transform 950ms cubic-bezier(.5, 0, .5, 1);
+                @media (min-width: $desktop) {
+                   object-fit: cover;
+                }
+                transition: transform 950ms cubic-bezier(.5, 0, .5, 1);
                 &:hover {
                     transform: scale(1.2);
                 }
