--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,7 +16,7 @@ body {
     min-height: 100vh;
     font-family: $font;
     background-color: #000;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .background {
