--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,12 +11,19 @@ $dark-color: #3d3f3e;
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+ 
+    width: 100%;
+}
+
 body {
     width: 100%;
     min-height: 100vh;
     font-family: $font;
     background-color: #000;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .background {
