--- a/scss/main.css
+++ b/scss/main.css
@@ -5,11 +5,6 @@
           box-sizing: border-box;
 }
 
-html {
-  height: 100%;
-  width: 100%;
-}
-
 body {
   width: 100%;
   min-height: 100vh;
@@ -24,6 +19,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  width: 100vw;
 }
 
 @media (min-width: 700px) {
@@ -323,7 +319,19 @@ header h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
+}
+
+@media (orientation: portrait) {
+  .portfolio {
+    padding: 3em 0;
+    border: 6px solid red;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
+  .portfolio {
+    padding: 3em 0;
+  }
 }
 
 .portfolio-box {
