--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,11 +11,10 @@ $dark-color: #3d3f3e;
     box-sizing: border-box;
 }
 
-html {
-    height: 100%;
- 
-    width: 100%;
-}
+// html {
+//     height: 100%;
+//     width: 100%;
+// }
 
 body {
     width: 100%;
@@ -31,6 +30,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    width: 100vw;
     @media (min-width: $desktop) {
         background-image: url("../assets/desktop.jpg");
     }
@@ -231,7 +231,18 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    position: relative;
+    // position: relative;
+
+    @media (orientation: portrait) {
+       padding: 3em 0;
+       border: 6px solid red;
+    }
+
+    @media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
+        padding: 3em 0;
+        // border: 6px solid green;
+    } 
+
     &-box {
         @media (orientation: portrait) {
             width: 85%;
