--- a/scss/main.css
+++ b/scss/main.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -19,7 +19,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  width: 100vw;
+  background-position: center, center;
 }
 
 @media (min-width: 700px) {
@@ -43,8 +43,8 @@ nav ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding: 0.5em 1em;
   list-style: none;
 }
@@ -87,14 +87,14 @@ header {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   text-align: center;
   color: #fff;
   background-color: rgba(0, 0, 0, 0.1);
@@ -180,11 +180,11 @@ header h2 {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .about-header span a {
@@ -249,12 +249,12 @@ header h2 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding: 2em 1.2em;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 @media (min-width: 700px) {
@@ -262,8 +262,8 @@ header h2 {
     width: 60%;
     padding: 4em 1.2em;
     -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
   }
 }
 
@@ -290,18 +290,23 @@ header h2 {
   .contact a:nth-child(1) i {
     color: #3d3f3e;
   }
+
   .contact a:nth-child(1) i:hover {
     color: #757e61;
   }
+
   .contact a:nth-child(3) i {
     color: #757e61;
   }
+
   .contact a:nth-child(3) i:hover {
     color: #e4c396;
   }
+
   .contact a:nth-child(4) i {
     color: #b46f36;
   }
+
   .contact a:nth-child(4) i:hover {
     color: #3d3f3e;
   }
@@ -314,11 +319,11 @@ header h2 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 @media (orientation: portrait) {
@@ -341,14 +346,14 @@ header h2 {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   border-radius: 50px;
 }
 
@@ -383,35 +388,41 @@ header h2 {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   position: relative;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-@media (orientation: portrait) {
-  .portfolio-box-content {
-    width: 85%;
-    height: 80vh;
-  }
 }
 
 @media (min-width: 700px) {
   .portfolio-box-content {
     width: 90%;
     height: 80%;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 
-@media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
+@media (orientation: portrait) {
+  .portfolio-box-content {
+    width: 85%;
+    height: 75vh;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 1000px) and (orientation: landscape) {
   .portfolio-box-content {
     width: 85%;
     height: 70vh;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
   }
 }
 
@@ -480,13 +491,13 @@ header h2 {
 @media (min-width: 700px) {
   .portfolio-box-content img {
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
 }
 
 .portfolio-box-content img:hover {
   -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .portfolio-box-content h2 {
@@ -528,7 +539,7 @@ header h2 {
 
 @media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
   .portfolio-box-content p {
-    font-size: 1em;
+    font-size: 0.8em;
     padding-bottom: 1.2em;
     width: 90%;
   }
@@ -557,11 +568,11 @@ header h2 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 80%;
 }
 
@@ -569,8 +580,8 @@ header h2 {
   .portfolio-box .buttons {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     width: 90%;
   }
 }
@@ -618,7 +629,7 @@ header h2 {
 
 .portfolio-box .buttons button:hover {
   -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .portfolio-box .buttons i {
@@ -643,15 +654,15 @@ header h2 {
 
 .portfolio-box .buttons i:hover {
   -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 footer {
   background-color: rgba(0, 0, 0, 0.1);
   padding: 1em 0em;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 @media (min-width: 700px) {
@@ -665,10 +676,10 @@ footer div {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 90%;
   margin: 0 auto;
 }
@@ -707,4 +718,5 @@ footer i {
 footer i:hover {
   color: #e4c396;
 }
+
 /*# sourceMappingURL=main.css.map */
