--- a/scss/main.css
+++ b/scss/main.css
@@ -15,8 +15,8 @@ body {
 }
 
 .background {
-  background-image: url("../assets/desktop.jpg");
-  background-repeat: no-repeat;
+  background-image: url("../assets/mobile.jpg");
+  background-repeat: repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: center, center;
@@ -25,10 +25,12 @@ body {
 @media (min-width: 700px) {
   .background {
     background-image: url("../assets/desktop.jpg");
+    background-repeat: no-repeat;
   }
 }
 
 nav {
+  border-bottom: 4px double gold;
   font-size: 1em;
   position: -webkit-sticky;
   position: sticky;
