--- a/scss/main.css
+++ b/scss/main.css
@@ -15,7 +15,7 @@ body {
 }
 
 .background {
-  background-image: url("../assets/mobile.jpg");
+  background-image: url("../assets/mobile2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
