--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,7 +27,8 @@ body {
 }
 
 .background {
-    background-image: url("../assets/mobile.jpg");
+    // background-image: url("../assets/mobile.jpg");
+    background-image: url("../assets/mobile2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
