--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,7 +32,9 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-position: center, center;
+    // background-position: center, center;
+    background-position: 50% 50%;
+    width: 100%;
 
     @media (min-width: $desktop) {
         background-image: url("../assets/desktop.jpg");
