--- a/scss/main.css
+++ b/scss/main.css
@@ -15,12 +15,12 @@ body {
 }
 
 .background {
-  background-image: url("../assets/mobile2.jpg");
+  background-image: url("../assets/mobile.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: 50% 50%;
-  width: 100%;
+  max-width: 100vw !important;
 }
 
 @media (min-width: 700px) {
