--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,14 +27,14 @@ body {
 }
 
 .background {
-    // background-image: url("../assets/mobile.jpg");
-    background-image: url("../assets/mobile2.jpg");
+    background-image: url("../assets/mobile.jpg");
+    // background-image: url("../assets/mobile2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     // background-position: center, center;
     background-position: 50% 50%;
-    width: 100%;
+    max-width: 100vw !important;
 
     @media (min-width: $desktop) {
         background-image: url("../assets/desktop.jpg");
