--- a/scss/main.css
+++ b/scss/main.css
@@ -15,12 +15,12 @@ body {
 }
 
 .background {
-  background-image: url("../assets/mobile.jpg");
+  background-image: url("../assets/mobile3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-position: 50% 50%;
-  max-width: 100vw !important;
+  max-width: 95vw !important;
+  border: 2px solid red;
 }
 
 @media (min-width: 700px) {
