--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,14 +27,16 @@ body {
 }
 
 .background {
-    background-image: url("../assets/mobile.jpg");
+    background-image: url("../assets/mobile3.jpg");
     // background-image: url("../assets/mobile2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     // background-position: center, center;
-    background-position: 50% 50%;
-    max-width: 100vw !important;
+    // background-position: 50% 50%;
+    max-width: 95vw !important;
+    border: 2px solid red;
+
 
     @media (min-width: $desktop) {
         background-image: url("../assets/desktop.jpg");
