--- a/scss/main.css
+++ b/scss/main.css
@@ -30,8 +30,10 @@ body {
 
 @media (orientation: portrait) {
   .background {
-    background-size: 100% 100%;
-    border: 5px solid red;
+    background-size: 100% auto;
+    border: 5px solid blue;
+    background-attachment: fixed;
+    background-position: top, center;
   }
 }
 
