--- a/scss/main.css
+++ b/scss/main.css
@@ -14,26 +14,22 @@ body {
   overflow-y: auto;
 }
 
-.background {
-  background-image: url("../assets/mobile.jpg");
-  background-repeat: no-repeat;
+#portfolio:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("../assets/mobile.jpg") no-repeat center center;
   background-size: cover;
-  background-attachment: fixed;
-  background-position: center, center;
 }
 
 @media (min-width: 700px) {
-  .background {
+  #portfolio:before {
     background-image: url("../assets/desktop.jpg");
-  }
-}
-
-@media (orientation: portrait) {
-  .background {
-    background-size: 100% auto;
-    border: 5px solid blue;
-    background-attachment: fixed;
-    background-position: top, center;
   }
 }
 
@@ -45,6 +41,12 @@ nav {
   left: 0;
   z-index: 44;
   background: rgba(0, 0, 0, 0.1);
+}
+
+@media (orientation: portrait) {
+  nav {
+    background: rgba(0, 0, 0, 0.3);
+  }
 }
 
 nav ul {
@@ -70,7 +72,7 @@ nav ul li:first-child a {
 
 @media (orientation: portrait) {
   nav ul li:first-child a {
-    color: #3d3f3e;
+    color: #e4c396;
   }
 }
 
@@ -81,7 +83,7 @@ nav ul a {
 
 @media (orientation: portrait) {
   nav ul a {
-    color: #3d3f3e;
+    color: #e4c396;
   }
 }
 
@@ -333,7 +335,6 @@ header h2 {
 @media (orientation: portrait) {
   .portfolio {
     padding: 3em 0;
-    border: 6px double green;
   }
 }
 
