--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,27 +26,48 @@ body {
     overflow-y: auto;
 }
 
-.background {
-    background-image: url("../assets/mobile.jpg");
-    // background-image: url("../assets/mobile2.jpg");
-    background-repeat: no-repeat;
+#portfolio:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url("../assets/mobile.jpg") no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-attachment: fixed;
-    background-position: center, center;
 
     @media (min-width: $desktop) {
         background-image: url("../assets/desktop.jpg");
 
     }
-
-    @media (orientation: portrait) {
-        background-size: 100% auto;
-        border: 5px solid blue;
-        background-attachment: fixed;
-        background-position: top, center;
-    }
-
 }
+
+// .background {
+//     background-image: url("../assets/mobile.jpg");
+//     // background-image: url("../assets/mobile2.jpg");
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     background-attachment: fixed;
+//     background-position: center, center;
+
+//     @media (min-width: $desktop) {
+//         background-image: url("../assets/desktop.jpg");
+
+//     }
+
+//     @media (orientation: portrait) {
+//         background-size: 100% auto;
+//         border: 5px solid blue;
+//         background-attachment: fixed;
+//         background-position: top, center;
+//     }
+
+// }
 
 nav {
     font-size: 1em;
@@ -55,6 +76,10 @@ nav {
     left: 0;
     z-index: 44;
     background: rgba(0, 0, 0, 0.1);
+
+    @media (orientation: portrait) {
+        background: rgba(0, 0, 0, 0.3);
+    }
 
     ul {
         display: flex;
@@ -70,7 +95,7 @@ nav {
             color: $dark-color;
 
             @media (orientation: portrait) {
-                color: $dark-color;
+                color: $orange-color;
             }
         }
 
@@ -79,7 +104,7 @@ nav {
             color: $orange-color;
 
             @media (orientation: portrait) {
-                color: $dark-color;
+                color: $orange-color;
             }
 
             &:hover {
@@ -283,12 +308,10 @@ header {
 
     @media (orientation: portrait) {
         padding: 3em 0;
-        border: 6px double green;
     }
 
     @media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
         padding: 3em 0;
-        // border: 6px solid green;
     }
 
     &-box {
