--- a/scss/main.css
+++ b/scss/main.css
@@ -7,11 +7,9 @@
 
 body {
   width: 100%;
-  min-height: 100vh;
   font-family: "Rosarivo", serif;
   background-color: #000;
   overflow-x: hidden;
-  overflow-y: auto;
 }
 
 #portfolio:before {
@@ -43,12 +41,6 @@ nav {
   background: rgba(0, 0, 0, 0.1);
 }
 
-@media (orientation: portrait) {
-  nav {
-    background: rgba(0, 0, 0, 0.3);
-  }
-}
-
 nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -70,12 +62,6 @@ nav ul li:first-child a {
   color: #3d3f3e;
 }
 
-@media (orientation: portrait) {
-  nav ul li:first-child a {
-    color: #e4c396;
-  }
-}
-
 nav ul a {
   text-decoration: none;
   color: #e4c396;
@@ -83,7 +69,7 @@ nav ul a {
 
 @media (orientation: portrait) {
   nav ul a {
-    color: #e4c396;
+    color: #3d3f3e;
   }
 }
 
@@ -173,7 +159,9 @@ header h2 {
 
 @media (orientation: portrait) {
   .about {
-    background-color: rgba(0, 0, 0, 0.5);
+    background: black;
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(67%, rgba(0, 0, 0, 0.426191)), to(rgba(0, 0, 0, 0.1)));
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.426191) 67%, rgba(0, 0, 0, 0.1) 100%);
     color: #fff;
   }
 }
@@ -297,25 +285,28 @@ header h2 {
   color: #b46f36;
 }
 
-@media (min-width: 700px) {
-  .contact a:nth-child(1) i {
-    color: #3d3f3e;
-  }
-  .contact a:nth-child(1) i:hover {
-    color: #757e61;
-  }
-  .contact a:nth-child(3) i {
-    color: #757e61;
-  }
-  .contact a:nth-child(3) i:hover {
-    color: #e4c396;
-  }
-  .contact a:nth-child(4) i {
-    color: #b46f36;
-  }
-  .contact a:nth-child(4) i:hover {
-    color: #3d3f3e;
-  }
+.contact a:nth-child(1) i {
+  color: #3d3f3e;
+}
+
+.contact a:nth-child(1) i:hover {
+  color: #757e61;
+}
+
+.contact a:nth-child(3) i {
+  color: #757e61;
+}
+
+.contact a:nth-child(3) i:hover {
+  color: #e4c396;
+}
+
+.contact a:nth-child(4) i {
+  color: #b46f36;
+}
+
+.contact a:nth-child(4) i:hover {
+  color: #3d3f3e;
 }
 
 .portfolio {
@@ -484,13 +475,41 @@ header h2 {
   }
 }
 
+@-webkit-keyframes imgScale {
+  0% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes imgScale {
+  0% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
 .portfolio-box-content img {
   width: 100%;
   height: 100%;
-  -webkit-transition: -webkit-transform 950ms cubic-bezier(0.5, 0, 0.5, 1);
-  transition: -webkit-transform 950ms cubic-bezier(0.5, 0, 0.5, 1);
-  transition: transform 950ms cubic-bezier(0.5, 0, 0.5, 1);
-  transition: transform 950ms cubic-bezier(0.5, 0, 0.5, 1), -webkit-transform 950ms cubic-bezier(0.5, 0, 0.5, 1);
+  -webkit-animation: imgScale 3s linear;
+          animation: imgScale 3s linear;
+  -webkit-transition: -webkit-transform 3s cubic-bezier(0.5, 0, 0.5, 1);
+  transition: -webkit-transform 3s cubic-bezier(0.5, 0, 0.5, 1);
+  transition: transform 3s cubic-bezier(0.5, 0, 0.5, 1);
+  transition: transform 3s cubic-bezier(0.5, 0, 0.5, 1), -webkit-transform 3s cubic-bezier(0.5, 0, 0.5, 1);
 }
 
 @media (min-width: 700px) {
@@ -568,7 +587,7 @@ header h2 {
   overflow: scroll;
 }
 
-.portfolio-box .buttons {
+.portfolio-box .buttons-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -582,7 +601,7 @@ header h2 {
 }
 
 @media (min-width: 700px) {
-  .portfolio-box .buttons {
+  .portfolio-box .buttons-container {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -592,74 +611,139 @@ header h2 {
 }
 
 @media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
-  .portfolio-box .buttons {
+  .portfolio-box .buttons-container {
     width: 80%;
   }
 }
 
-.portfolio-box .buttons button {
+.portfolio-box .buttons-container .buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 80%;
+}
+
+@media (orientation: portrait) {
+  .portfolio-box .buttons-container .buttons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: auto;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.portfolio-box .buttons-container button {
   padding: 0.5em 2.5em;
+  margin: 0.5em;
   border-radius: 40px;
   border: none;
-  background-color: #b46f36;
+  background-color: #3d3f3e;
+  -webkit-box-shadow: 1px 1px 2px #757e61;
+          box-shadow: 1px 1px 2px #757e61;
   -webkit-transition: all 2s linear;
   transition: all 2s linear;
 }
 
 @media (orientation: portrait) {
-  .portfolio-box .buttons button {
+  .portfolio-box .buttons-container button {
     padding: 0.3em 1em;
   }
 }
 
 @media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
-  .portfolio-box .buttons button {
+  .portfolio-box .buttons-container button {
     padding: 0.3em 1em;
     font-size: 0.7em;
   }
 }
 
-.portfolio-box .buttons button:nth-child(3) {
+.portfolio-box .buttons-container button:nth-child(3) {
   background-color: #757e61;
   color: #fff;
 }
 
-.portfolio-box .buttons button a {
+.portfolio-box .buttons-container button a {
   text-decoration: none;
 }
 
-.portfolio-box .buttons button a:last-child {
+.portfolio-box .buttons-container button a:last-child {
   color: #fff;
 }
 
-.portfolio-box .buttons button:hover {
+.portfolio-box .buttons-container button:hover {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
 
-.portfolio-box .buttons i {
+.portfolio-box .buttons-container i {
   font-size: 2em;
   cursor: pointer;
   color: #3d3f3e;
-  -webkit-transition: all 2s linear;
-  transition: all 2s linear;
-}
-
-@media (orientation: portrait) {
-  .portfolio-box .buttons i {
-    font-size: 1.5em;
-  }
+  -webkit-transition: all 1s linear;
+  transition: all 1s linear;
+  position: relative;
 }
 
 @media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
-  .portfolio-box .buttons i {
+  .portfolio-box .buttons-container i {
     font-size: 1.5em;
   }
 }
 
-.portfolio-box .buttons i:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+.portfolio-box .buttons-container i:first-child:hover {
+  -webkit-animation: arrowLeftMove 1.5s linear infinite alternate;
+          animation: arrowLeftMove 1.5s linear infinite alternate;
+}
+
+.portfolio-box .buttons-container i:last-child:hover {
+  -webkit-animation: arrowRightMove 1.5s linear infinite alternate;
+          animation: arrowRightMove 1.5s linear infinite alternate;
+}
+
+@-webkit-keyframes arrowLeftMove {
+  from {
+    left: 0;
+  }
+  to {
+    left: -15px;
+  }
+}
+
+@keyframes arrowLeftMove {
+  from {
+    left: 0;
+  }
+  to {
+    left: -15px;
+  }
+}
+
+@-webkit-keyframes arrowRightMove {
+  from {
+    left: 0;
+  }
+  to {
+    left: 15px;
+  }
+}
+
+@keyframes arrowRightMove {
+  from {
+    left: 0;
+  }
+  to {
+    left: 15px;
+  }
 }
 
 footer {
@@ -703,9 +787,10 @@ footer div {
 
 footer i {
   font-size: 1.2em;
+  text-shadow: 1px 1px 2px #b46f36;
   -webkit-transition: all 0.4s linear;
   transition: all 0.4s linear;
-  color: #3d3f3e;
+  color: #e4c396;
 }
 
 @media (min-width: 700px) {
@@ -721,6 +806,6 @@ footer i {
 }
 
 footer i:hover {
-  color: #e4c396;
+  color: #3d3f3e;
 }
 /*# sourceMappingURL=main.css.map */
