--- a/scss/main.scss
+++ b/scss/main.scss
@@ -232,7 +232,6 @@ header {
     }
 }
 
-
 // portfolio page
 .portfolio {
     background-color: rgba(0, 0, 0, 0.1);
@@ -278,6 +277,8 @@ header {
                 width: 90%;
                 height: 80%;
                 justify-content: center;
+                padding-top: 1em;
+        
             }
             @media (orientation: portrait) {
                 width: 85%;
@@ -356,7 +357,7 @@ header {
                 padding: 1em;
                 @media (min-width: $desktop) {
                     font-size: 2.5em;
-                    padding-bottom: 1.5em;
+                    // padding-bottom: 1.5em;   // padding-bottom: 1.5em;
                 }
                 @media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
                     font-size: 1.5em;
